--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ and open the template in the editor.
                 <div class="col-md-12 deep-white" style="color:  #229954; height: 80px; text-align: center;">
                     <div class="row">
                         <div class="col-md-3 deep-white"  "> <img src="image/weather.png" alt="weather" align="left" style="width:20%; height: 60px;  "><p style="text-align:  left; line-height: 8px;"><br/><br/><br/><br/>Dhaka,Bangladesh</p></div>
-                        <div class="col-md-6 deep-white" style="text-align: center;  "><img src="image/logo.jpg" width="80%" height="70px" alt="weather"/> </div>
+                        <div class="col-md-6 deep-white" style="text-align: center;  "><img src="image/logo.JPG" width="80%" height="70px" alt="weather"/> </div>
                         <div class="col-md-3 deep-white" style="padding:25px 25px;"><input type="text" align="middle" placeholder="Search.."><input type="submit" value="search" /></div>
                     </div>
                 </div>
