--- a/first.html
+++ b/first.html
@@ -224,7 +224,7 @@ and open the template in the editor.
             </div><br/>
             <!--footer link closed-->
             <div class="row" id="copyright"  style="font-size: 12px;">
-                <div id="copyrightLeft"  style="padding:75px 25px;"><image src="image/logo.jpg" width="90%" height="35px"  alt="logo" /> </div>
+                <div id="copyrightLeft"  style="padding:75px 25px;"><image src="image/logo.JPG" width="90%" height="35px"  alt="logo" /> </div>
                 <div id="copyrightRight">
                     <div id="copyrightRight1"><p style="text-align: left;"><b>Acting Editor: Muhammad Abdul Wadud Azad</b> </p>
                         <p style="text-align: left;"><b>Published by Muhammad Abdul Wadud</b> on behalf of Azad Multimedia Limited and printed by City Publishing Limited from Wadud Bhaban<br/>
