--- a/index.html
+++ b/index.html
@@ -451,7 +451,8 @@ and open the template in the editor.
                             <div>
                                 <form class="navbar-form navbar-left" role="search">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="">
+                                        <label> Date</label>
+                       <input type="date" name="dob" />
                                     </div>
 
                                 </form>
