--- a/back.html
+++ b/back.html
@@ -135,7 +135,11 @@ and open the template in the editor.
                             <div>
                                 <form class="navbar-form navbar-left" role="search">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="">
+                                        
+										<div>
+										<label> Date</label>
+                       <input type="date" name="dob" />
+					   </div>
                                     </div>
 
                                 </form>
